--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
